<resources>
    <string name="app_name">Lab</string>
    <string name="generic_error_message">Generic Error Message</string>
    <string name="label_enable_exposure_notification">Exposure Notification API</string>
    <string name="button_enable_exposure_notification">Enable</string>
    <string name="button_disable_exposure_notification">Disable</string>
    <string name="nav_status">Status</string>
    <string name="nav_keys">Keys</string>
    <string name="export_keys">Export TEKs</string>
    <string name="import_keys">Import diagnosis keys</string>
    <string name="export_keys_status">Posted %1$d keys</string>
    <string name="share_tek_generic_error">Unexpected error while exporting keys</string>
    <string name="last_results_header">Last test results</string>
    <string name="attenuations">Attenuation: %1$s</string>
    <string name="durations">Duration: %1$s</string>
    <string name="transmissionRisk">Transmission risk: %1$s</string>
    <string name="riskScore">Transmission risk score: %1$s</string>
    <string name="show_tek_qr">Share TEK</string>
    <string name="share_tek_no_key_error">No key available, please try again</string>
    <string name="keys_scan_barcode">Scan TEK barcode</string>
    <string name="test_id_hint">Test identifier</string>
    <string name="keys_test_id">Test id: %1$s</string>
    <string name="keys_device_id">Device name: %1$s</string>
    <string name="keys_share_results">Save results</string>
    <string name="share_results">Test id: %1$s\nDevice name: %7$s\nSource device name: %2$s\nAttenuations: %3$s\nTEK: %9$s\nAttenuation durations: %8$s\nDurations: %4$s\nTotal risk scores: %5$s\nTransmission risk scores: %6$s</string>
    <string name="share_results_title">Test results %2$s (%1$s)</string>
    <string name="device_name_hint">Device name</string>
    <string name="attenuation_durations">Attenuation durations: %1$s</string>
    <string name="tek_base64">TEK: %1$s</string>
    <string name="scan_instance_result">Attn min: %1$d Db, typical: %2$d Db, duration: %3$d s</string>
    <string name="test_result_no_scans">no scan results</string>
    <string name="keys_import_tek_success">Imported TEK</string>
    <string name="keys_import_tek_failure">Error processing TEK</string>
    <string name="keys_previous_result_message">Previous matches found on the device. Please remove these matches before scanning.</string>
    <string name="keys_previous_result_positive">Remove</string>
    <string name="keys_previous_result_title">Previous results found</string>
    <string name="export_results">Export CSV</string>
    <string name="clear_results">Clear results</string>
    <string name="clear_results_title">Remove test results</string>
    <string name="clear_results_message">Remove all test results?</string>
    <string name="clear_results_negative">Cancel</string>
    <string name="clear_results_positive">Clear</string>
</resources>
